--- a/index.html
+++ b/index.html
@@ -4,18 +4,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <title>Vacation to Costa Rica</title>
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
+        <button type="button" class="navbar-toggle" data-toggle="collapse data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
         <a class="navbar-brand text-muted" href="#"><abbr title="Joshua David Gustafson">JDG</abbr> <abbr title="Blair Peterson">BP</abbr></a>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">About Costa Rica</a></li>
-            <li><a href="#">More</a></li>
+            <li class="dropdown">
+              <a data-toggle="dropdown" data-target="#">More<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">one</a></li>
+                <li class="divider"></li>
+                <li><a href="#">two</a></li>
+                <li class="divider"></li>
+                <li><a href="#">three</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
